--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@
  *  - https://twitter.com/mmistakes
  *
 */
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+/*@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin */
 /*@import "minimal-mistakes"; // main partials*/
 
 
