--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,11 +10,11 @@
  *
 */
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin 
-@import "minimal-mistakes"; // main partials
+/*@import "minimal-mistakes"; // main partials */
 
 
 
-/*
+
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
@@ -44,4 +44,4 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
-*/
+ 
